alignment nav fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -63,7 +63,6 @@ body {
         ul {
             display: table;
             margin: 0 auto;
-            text-align: center;
             padding: 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
@@ -169,14 +168,6 @@ body {
                         letter-spacing: @font-swatch6-letter-spacing;
                         position: relative;
                         &:after {
-                            content: "\25BC";
-                            font-size: 5px;
-                            position: absolute;
-                            top: 1px;
-                            display: block;
-                            z-index: 9999999;
-                            right: 0;
-                            color: @color-swatch5;
                             @media @tablet {
                                 font-size: 10px;
                                 color: @color-swatch5;
@@ -245,10 +236,6 @@ body {
            }
        }
     }
-}
-
-.widget .extendednavigation ul li.folder:after {
-    display: none;
 }
 
 .widget.extendednavigation .bk-overlay {
@@ -1659,6 +1646,16 @@ footer .widget.profile .bk-profile-socialicons span a:hover {
     background-image: image('/images/social/socialicons-youtube.png')
 }
 
+/*  ===============================
+    Media queries
+    =============================== */
+
+@media @tablet {
+    .widget .extendednavigation ul.align-right li.folder:after {
+        left: 5px;
+        right: inherit;
+    }
+}
 
 /* ===============================
   Clearfix
